<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">HAWApp</string>
    
    <string name="menu_settings">Settings</string>
    <string name="sb_main_menu_delete">löschen</string>
    <string name="sb_main_btn_neue_nachricht">neue Nachricht</string>
    <string name="sb_main_btn_anfragen">Anfragen</string>
    <string name="sb_main_btn_angebote">Angebote</string>
    <string name="sb_neue_nachricht">Neue Nachricht</string>
    <string name="sb_neue_nachricht_titel">Titel:</string>
    <string name="sb_neue_nachricht_bild">Bild:</string>
    <string name="sb_neue_nachricht_text">Text:</string>
    <string name="sb_neue_nachricht_kontakt">Kontakt:</string>
    <string name="sb_neue_nachricht_btn_erstellen">erstellen</string>
    <string name="sb_neue_nachricht_btn_bild" tools:ignore="TypographyEllipsis">...</string>
    <string name="sb_nachricht">Nachricht</string>
    <string name="sb_nachricht_titel">Titel</string>
    <string name="sb_nachricht_autor">Author</string>
    <string name="sb_nachricht_datum">Datum</string>
    <string name="sb_nachricht_text">Text</string>
    <string name="sb_nachricht_kontakt">Kontakt</string>
    
    <string name="sb_new_offer_titel">Titel:</string>
    <string name="sb_new_offer_category">Kategorie:</string>
    <string name="sb_new_offer_image">Bild:</string>
    <string name="sb_new_offer_btn_bild">...</string>
    <string name="sb_new_offer_text">Text:</string>
    <string name="sb_new_offer_contakt">Kontakt:</string>
    <string name="sb_new_offer_btn_create">erstellen</string>
    <string name="ol_text">Text</string>
    <string name="rubbish">Papierkorb</string>
    <string name="Delete">Löschen</string>
    <string name="sb_offer_title">Titel</string>
    <string name="sb_offer_autor">Author</string>
    <string name="sb_offer_date">Datum</string>
    <string name="sb_offer_text">Text</string>
    <string name="sb_offer_contakt">Kontakt</string>
     
    <string name="loading">Lade</string>
    
		<!-- Login: start -->
	<string name="noInternet">Keine Internetverbindung</string>
    <string name="show_dialog">Dialog</string>
    <string name="loginName">Name</string>
    <string name="loginPassword">Passwort</string>
    <string name="savePassword">Passwort speichern</string>
    <string name="login">Einloggen</string>
    <string name="logout">Ausloggen</string>
    <string name="checkLogin">Überprüfe Login...</string>
    <string name="failedLogin">Login gescheitert</string>
    <string name="succesfulLogin">Login erfolgreich</string>
    <string name="loggedOut">ausgeloggt</string>
    <string name="hawLogoDescritpion">HAW-Logo</string>
	<!-- Login : end -->  
	
	<!-- Stisys : start -->
	<string name="loadingStisys">Lade</string>
	<!-- Stisys : end -->
	
	<!-- LoginActivity strings -->
	<string name="cal_back">Zurück</string>
	<!-- CalendarActivity strings End --> 
    <string name="action_settings">Settings</string>
 	<string name="title_activity_calendarlecture">Vorlesung</string>
 	<string name="title_activity_calendarlectures">Vorlesungen</string>
 	<string name="title_activity_changeLog">ChangeLog</string>
 	<string name="title_calendar">Kalendar</string>
    <string name="title_activity_calendar_subcripted_lectures">Abonnierte Vorlesungen</string>
    <string name="title_activity_calendar_appointment">Termin</string> 
    <string name="title_activity_calendar_appointments">Termine</string> 
    
    <string name="hello_world">Hello world!</string>

    
    <string name="btnTitle_aboVorlesungen">Abonnierte Vorlesungen</string>
    <string name="btnTitle_aenderungSpeichern">Änderungen speichern</string>
    <string name="btnTitle_Ort">Ort</string>
    <string name="txtTitle_Ende">Ende</string>
    <string name="txtTitle_Details">Ende</string>
    <string name="btnTitle_DeleteTermin">Termin löschen</string>
    <string name="btnTitle_abonnieren">abonnieren</string>
    <string name="btnTitle_neuerTermin">neuer Termin</string>
    <string name="txtTitle_Beginn">Beginn</string>
    <string name="txtTitle_Name">Name</string>
    <string name="txtTitle_Dozent">Dozent</string> 
    <string name="revert">Rückgängig</string>
    
    
    

  
</resources>