<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@layout/sb_bg_repeat"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.29" 
        android:background="@drawable/papier_v2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:padding="15dp">

            <TextView
                android:id="@+id/sb_nachricht_titel_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_nachricht_titel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sb_nachricht_autor_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_nachricht_autor"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sb_nachricht_datum_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_nachricht_datum"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sb_nachricht_text_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_nachricht_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sb_nachricht_strich_text_view"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="#000000" />

            <TextView
                android:id="@+id/sb_nachricht_kontakt_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_nachricht_kontakt"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>