<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/hawlogo2" 
                android:contentDescription="@string/hawLogoDescritpion"/>
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email -->

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/loginName"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/ColorEditText"
                android:textColorHint="@color/ColorHintText" />

            <!-- Password -->

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPassword"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/ColorHintText"
                android:textColor="@color/ColorEditText" />

            <!-- Login button -->

            <CheckBox
                android:id="@+id/checkBoxPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savePassword"
                android:textColor="@color/ColorText" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/ColorText"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/ColorText"
                android:textStyle="bold"
                android:visibility="gone" />
            <!-- Link to Registration Screen -->

        </LinearLayout>
        <!-- Login Form Ends -->


        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:background="@layout/activity_login_footer_repeat" >

        </LinearLayout>
        <!-- Footer Ends -->

    </RelativeLayout>

</ScrollView>