<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorBackground"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalendarlectureActivity" >

    <TextView
        android:id="@+id/lecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_calendarlecture"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ColorText" />

    <TextView
        android:id="@+id/lecturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lecture"
        android:layout_below="@+id/lecture"
        android:text="@string/txtTitle_Dozent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ColorText" />

    <TextView
        android:id="@+id/lectureName"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lecture"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/lecture"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ColorText" />

    <TextView
        android:id="@+id/lecturerName"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lecturer"
        android:layout_alignBottom="@+id/lecturer"
        android:layout_alignLeft="@+id/lectureName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ColorText" />

    <TextView
        android:id="@+id/Termine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lecturerName"
        android:layout_marginTop="16dp"
        android:text="@string/title_activity_calendar_appointments"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ColorText" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Termine"
        android:background="@color/ColorWhite" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ColorBackground" >

        <Button
            android:id="@+id/subscripeLecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" 
            android:text="@string/btnTitle_abonnieren"
            android:textColor="@color/ColorText" />
        <Button
            android:id="@+id/newAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/btnTitle_neuerTermin"
            android:textColor="@color/ColorText" />
        <Button
            android:id="@+id/cal_btn_changelog"            
            style="?android:attr/buttonBarButtonStyle" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/title_activity_changeLog"
            android:textColor="@color/ColorText" />


    </LinearLayout>

</RelativeLayout>