<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@color/ColorBackground"
     >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2" >

        <TableRow android:padding="5dip" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/txtTitle_Name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/ColorText" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                 />

            <EditText
                android:id="@+id/cal_app_name"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="left"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow android:padding="5dip" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/txtTitle_Beginn"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/ColorText" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:padding="10dip" />

            <EditText
                android:id="@+id/cal_app_begin"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:ems="10"
                android:freezesText="true"
                android:inputType="none" />
        </TableRow>

        <TableRow android:padding="5dip" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/txtTitle_Ende"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/ColorText" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:padding="10dip" />

            <EditText
                android:id="@+id/cal_app_end"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:ems="10"
                android:inputType="datetime" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/btnTitle_Ort"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/ColorText" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:padding="10dip" />

            <EditText
                android:id="@+id/cal_app_location"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:ems="10"
                android:freezesText="false"
                android:inputType="text" />

           
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/cal_app_details"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/cal_btn_app_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTitle_DeleteTermin"
        android:textColor="@color/ColorText" />

    <Button
        android:id="@+id/cal_btn_app_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTitle_aenderungSpeichern"
        android:textColor="@color/ColorText" />

</LinearLayout>