<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.53" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/sb_neueNachricht_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@android:layout/simple_spinner_item" >
            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/sb_neue_nachricht_titel_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sb_neue_nachricht_titel" />

                <EditText
                    android:id="@+id/sb_neue_nachricht_titel_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:ems="10" 
                    android:inputType="">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sb_neue_nachricht_bild_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb_neue_nachricht_bild" />

                <EditText
                    android:id="@+id/sb_neue_nachricht_bild_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:ems="10" 
                    android:inputType="">
                </EditText>

                <Button
                    android:id="@+id/sb_neue_nachricht_bild_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="loadBildUrl"
                    android:text="@string/sb_neue_nachricht_btn_bild" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/sb_neue_nachricht_text_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb_neue_nachricht_text" />

                <EditText
                    android:id="@+id/sb_neue_nachricht_text_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/sb_neue_nachricht_kontakt_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb_neue_nachricht_kontakt" />
 

                <EditText
                    android:id="@+id/sb_neue_nachricht_kontakt_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="9dp" >

        <Button
            android:id="@+id/sb_neue_nachricht_btn_erstellen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="erstellNachricht"
            android:text="@string/sb_neue_nachricht_btn_erstellen" />
    </LinearLayout>

</LinearLayout>